fix(minor): address 52 Phase 3 minor, design, and architecture issues (D1-D52, A1-A8)
- D1: Document TOML sentinel -1 usage in TestOrderState
- D2: Use epsilon comparison for double fields in toPersistedRoot()
- D3: Remove dead retained.add() branch in pruneDeletedTestClasses
- D4: Add STATE_LOAD_CACHE mutability warning comment
- D5: Remove dead Math.min(x, Long.MAX_VALUE) clamps in DurationTracker
- D6: Clarify thread-safety via synchronized methods in DurationTracker
- D7: Fix ceil division for recent-run balance in RunHistoryManager
- D8: Return Double.NaN (not 1.0) for no-failure/empty runs in APFDCalculator
- D9: Guard IntegerChromosome range in ScoringOptimizer (min<=max)
- D11: Add StandardCharsets.UTF_8 to FileHashStore I/O
- D14: Cache inverted graph in BytecodeDependencyAugmenter
- D15: Accumulate per-run durations before single EMA update in TelemetryPersistence
- D16: Log emergencySave exceptions at WARN level
- D17: Add named IDX_* constants for wire-format positions in StateRecordCodec
- D18: URL-encode class names in PartialRunAggregator .part files
- D19: Document intentional FAST compression in LZ4Support.frameOutputStream
- D20: Cache ML predictions in PriorityClassOrderer with mod-time invalidation
- D22: Safe copy-before-clear in FixedOrderSupport.applyOrder
- D23: Remove redundant size-check in ClassOrderingEngine error dedup
- D24: Extract shared orderByScoreAndDiversity logic in ClassOrderingEngine
- D25: Use Math.round() with 1ms floor for sub-ms duration in MethodOrderingEngine
- D26: Add alphabetical tie-breaker in MethodOrderingEngine comparator
- D27: Deep defensive copy in SetCoverComputer
- D28: Document O(N*U) complexity in SetCoverComputer
- D29: Fix O(n^3) complexity claim comment in TestSplitAdvisor.cluster()
- D30: Document reflection usage in AbstractTestOrderMojo
- D32: Read Maven session properties in SurefireHelper before System.getProperty fallback
- D34: Snapshot world.getRealms() before iteration in RuntimeRealmInjector
- D